Working on Instagram embed

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
 .app{
   background-color: #fafafa;
 }
+.app__posts{
+  padding: 20px;
+}
 .app__header{
   background-color: white;
   padding: 20px;
